--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,20 +38,17 @@ body {
     margin: 0 auto;
     padding-top: 38px;
     padding-bottom: 166px;
-
     &__logo {
         display: block;
         width: 137px;
         height:28px;
         background-image: url(../img/logo.svg);
     }
-
     &-list {
         list-style-type: none;
         display: flex;
         justify-content: flex-end;
         font-family: 'Open Sans', serif;
-
         &__item {
             margin-left: 22px;
             padding-bottom: 5px;
@@ -61,11 +58,9 @@ body {
                 border-bottom: 3px solid $accent-color;
             }
         }
-
         &__item.active {
             border-bottom: 3px solid $accent-color;
         }
-
         &__link {
             text-decoration: none;
             color:$light-color;
@@ -79,10 +74,16 @@ body {
     &__name {
         font-family: 'Open Sans', serif;
         font-size: 18px;
-        letter-spacing: 0.7px;
+        letter-spacing: 0.85px;
         margin-bottom: 30px;
+        margin-left: 3px;
+        margin-top: 1px;
     }
-
+    &__name_top {
+        margin-top: 17px;
+        margin-bottom: 19px;
+        margin-left: 0;
+    }
     &__title {
         font-size: 48px;
         font-weight: 700;
@@ -96,16 +97,13 @@ body {
             letter-spacing: 0.9px;
         }
     }
-
     &__description {
         font-family: 'Open Sans', serif;
         font-size: 15px;
         line-height: 24px;
-        letter-spacing: 0.9px;
-        word-spacing: -1px;
+        letter-spacing: 0.75px;       
         margin-bottom: 24px;
     }
-
     &__btn {
         display: block;
         background-color:$accent-color;
@@ -119,7 +117,6 @@ body {
         letter-spacing: 1.6px;
         margin-bottom: 19px;
     }
-
     small {
         font-family: 'Open Sans', serif;
         font-weight: 400;
@@ -131,7 +128,6 @@ body {
 .block-book {
     display: flex;
     justify-content: flex-start;
-
     &-demo {
         display: block;
         width: 445px;
@@ -139,5 +135,27 @@ body {
         background-image: url(../img/book-header.svg);
         background-repeat: no-repeat;
         flex-basis: 500px;
+    }
+}
+
+.page {
+    padding: 160px 0 0 0;
+}
+
+.block-author {
+    display: flex;
+    justify-content: space-between;
+}
+
+.block-ava {
+    position: relative;
+    &__svg {
+        position: absolute;
+        right: 0;
+        z-index: -1;
+    }
+    &__img {
+        margin-top: 48px;
+        margin-right: 45px;
     }
 }
