--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -159,3 +159,22 @@ body {
         margin-right: 45px;
     }
 }
+
+.block-counter {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 180px;
+    p {
+        font-family: 'Open Sans', serif;
+        font-size: 18px;        
+        text-align: center;
+        span {
+            display: block;
+            font-family: 'Roboto Slab', serif;
+            font-size: 80px;
+            font-weight: 100;
+            color: $accent-color;
+            margin-bottom: 13px;
+        }
+    }
+}
