--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,7 @@
 		<link rel="apple-touch-icon" sizes="120x120" href="./img/favicons/apple-touch-icon-120x120.png">
 		<link rel="apple-touch-icon" sizes="144x144" href="./img/favicons/apple-touch-icon-144x144.png">
 		<link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon-180x180.png">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700" rel="stylesheet">
 		<link rel="stylesheet" href="./styles/main.css">
 	</head>
 	<body>
@@ -60,7 +60,7 @@
 						<p class="block-text__name block-text__name_top">- Book Author</p>
 						<h2 class="block-text__title">Emma Anderson<span>A room without books is like a body without a soul</span></h2>
 						<p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+						<p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
 						<a href="#" class="block-text__btn">Read full biography</a>                    
 					</div>
 					<div class="block-ava">
@@ -76,7 +76,7 @@
 				</div>
 				<div class="block-counter">                    
 					<p><span>12</span>Total published books</p>
-					<p><span>5</span>Happy readers</p>
+					<p><span>5</span>Best selling books</p>
 					<p><span>15,000</span>Happy readers</p>                    
 				</div>
 			</div>
