--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,14 +7,23 @@
 
 $light-color:#fff;
 $accent-color:#65e496;
+$bg-light-color: #f5f6fa;
+$bg-dark-color: #44444f;
 
 h1, h2, h3, h4, p {
     padding: 0;
     margin: 0;
 }
 
+h3 {
+    font-size: 24px;
+    letter-spacing: 1.2px;
+}
+
 body {
    font-family: 'Roboto Slab', serif;
+   font-size: 15px;
+   line-height: 24px;
 }
 
 .wrap {
@@ -27,7 +36,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color:$light-color;
-    padding-bottom: 161px;
+    padding-bottom: 162px;
 }
 
 .header {
@@ -36,8 +45,8 @@ body {
     align-items: center;
     max-width: 1170px;
     margin: 0 auto;
-    padding-top: 38px;
-    padding-bottom: 166px;
+    padding-top: 33px;
+    padding-bottom: 163px;
     &__logo {
         display: block;
         width: 137px;
@@ -49,9 +58,10 @@ body {
         display: flex;
         justify-content: flex-end;
         font-family: 'Open Sans', serif;
+        margin-top: 20px;
         &__item {
-            margin-left: 22px;
-            padding-bottom: 5px;
+            margin-left: 26px;
+            padding-bottom: 3px;
             border-bottom: 3px solid transparent;
             transition: .3s;
             &:hover {
@@ -75,25 +85,24 @@ body {
         font-family: 'Open Sans', serif;
         font-size: 18px;
         letter-spacing: 0.85px;
-        margin-bottom: 30px;
-        margin-left: 3px;
-        margin-top: 1px;
+        margin-bottom: 43px;
+        margin-left: 2px;
     }
     &__name_top {
-        margin-top: 17px;
-        margin-bottom: 19px;
-        margin-left: 0;
+        margin-top: 15px;
+        margin-bottom: 33px;
+        margin-left: 0px;
     }
     &__title {
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1.8px;
-        margin-bottom: 40px;
+        margin-bottom: 38px;
         span {
             display: block;
-            font-size: 18px;           
-            color:$accent-color;
-            margin-top: 11px;
+            font-size: 18px;
+            color: $accent-color;
+            margin-top: 24px;
             letter-spacing: 0.9px;
         }
     }
@@ -106,22 +115,26 @@ body {
     }
     &__btn {
         display: block;
-        background-color:$accent-color;
-        color:$light-color;
+        background-color: $accent-color;
+        color: $light-color;
+        font-size: 18px;
         text-decoration: none;
         text-align: center;
         max-width: 250px;
         border-radius: 3px;
         margin-top: 47px;
-        padding: 15px 0;
-        letter-spacing: 1.6px;
-        margin-bottom: 19px;
+        padding: 12px 0;
+        letter-spacing: 0.75px;
+        margin-bottom: 16px;
+        &_biography {
+            max-width: 236px;
+        }
     }
     small {
         font-family: 'Open Sans', serif;
         font-weight: 400;
         font-style: italic;
-        letter-spacing: 0.2px;
+        letter-spacing: 0.6px;
     }
 }
 
@@ -139,7 +152,23 @@ body {
 }
 
 .page {
-    padding: 160px 0 0 0;
+    padding: 160px 0 160px 0;
+    &_gray {
+        background-color: $bg-light-color;
+        padding: 163px 0 254px 0;
+    }
+    &__title {
+        font-size: 48px;
+        text-align: center;
+        letter-spacing: 2px;
+        margin-bottom: 24px;
+    }
+    &__subtitle {
+        color: $accent-color;
+        text-align: center;
+        font-size: 18px;
+        letter-spacing: 0.9px;
+    }
 }
 
 .block-author {
@@ -163,7 +192,7 @@ body {
 .block-counter {
     display: flex;
     justify-content: space-around;
-    margin-top: 180px;
+    margin-top: 211px;
     p {
         font-family: 'Open Sans', serif;
         font-size: 18px;        
@@ -174,7 +203,94 @@ body {
             font-size: 80px;
             font-weight: 100;
             color: $accent-color;
-            margin-bottom: 13px;
+            margin-bottom: 45px;
         }
+    }
+}
+
+.block-about {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 83px;
+    h3 {
+        margin-bottom: 20px;
+    }
+    p {
+        font-family: 'Open Sans', serif;
+        letter-spacing: 0.75px;
+    }
+    &-text {
+        flex-basis: 41%;
+        &__social {
+            display: flex;
+            margin-top: 30px;
+            margin-left: 1px;
+            p {
+                font-family: 'Roboto Slab', serif;
+                font-size: 18px;
+                font-weight: 700;
+                letter-spacing: 1px;
+                margin-right: 8px;
+            }
+            ul {
+                list-style-type: none;
+                display: flex;
+                color: $accent-color;
+                margin: 1px 0 0 0;
+                padding: 0;
+                &>li {
+                    a {
+                        font-size: 20px;
+                        color: $accent-color;
+                        margin-left: 14px;
+                    }
+                }
+            }
+        }
+    }
+    &-table {
+        flex-basis: 49%;
+        &__list {
+            margin: 25px 0 0 0;
+            padding: 0;
+            counter-reset: list;
+            column-count: 2;
+            &>li {
+                counter-increment: list;
+                list-style-type: none;
+                position: relative;
+                padding-left: 37px;
+                margin-bottom: 8px;
+                letter-spacing: 0.7px;
+                &::before {
+                    content: counter(list) ". ";
+                }
+                &::after {
+                    content: '+';
+                    position: absolute;   
+                    left: 0;
+                    top: 1px;
+                    font-family: 'Open Sans', serif;
+                    font-size: 15px;
+                    line-height: 22px;
+                    background-color:$accent-color;
+                    color: $light-color;
+                    padding: 0px 7px;
+                    margin-bottom: 10px;          
+                }
+            }
+        }
+    }
+    &__btn {
+        border: none;
+        outline: none;
+        background-color: $accent-color;
+        color: $light-color;
+        font-size: 18px;
+        letter-spacing: 0.9px;
+        padding: 13px 42px 17px 45px;
+        border-radius: 3px;
+        margin-left: 2px;
+        margin-top: 27px;
     }
 }
