--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,6 +17,7 @@
 		<link rel="apple-touch-icon" sizes="144x144" href="./img/favicons/apple-touch-icon-144x144.png">
 		<link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon-180x180.png">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<link rel="stylesheet" href="./styles/main.css">
 	</head>
 	<body>
@@ -61,7 +62,7 @@
 						<h2 class="block-text__title">Emma Anderson<span>A room without books is like a body without a soul</span></h2>
 						<p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						<p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
-						<a href="#" class="block-text__btn">Read full biography</a>                    
+						<a href="#" class="block-text__btn block-text__btn_biography">Read full biography</a>                    
 					</div>
 					<div class="block-ava">
 						<svg class="block-ava__svg" width="435" height="558">
@@ -81,26 +82,26 @@
 				</div>
 			</div>
 		</div>
-		<div class="page">
+		<div class="page page_gray">
 			<div class="wrap">
 				<h2 class="page__title">Book Contents</h2>
 				<p class="page__subtitle">Let’s see what we have covered in the book</p>
 				<div class="block-about">
-					<div class="">
+					<div class="block-about-text">
 						<h3 class="">About the book</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur.</p>
-						<div class="">
+						<div class="block-about-text__social">
 							<p>Featured in:</p>
 							<ul>
-								<li><a href="#" class=""></a></li>
-								<li><a href="#" class=""></a></li>
-								<li><a href="#" class=""></a></li>
+								<li><a href="#" class=""><i class="fab fa-stack-overflow"></i></a></li>
+								<li><a href="#" class=""><i class="fab fa-amazon"></i></a></li>
+								<li><a href="#" class=""><i class="fab fa-sass"></i></a></li>
 							</ul>
 						</div>
 					</div>
-					<div class="">
-						<h3 class="">Table of contents</h3>
-						<ol class="">
+					<div class="block-about-table">
+						<h3>Table of contents</h3>
+						<ol class="block-about-table__list">
 						   <li class="">Lorem ipsum dolor sit amet</li>
 						   <li class="">Consectetur adipisicing elit</li>
 						   <li class="">Labore et dolore magna</li>
@@ -112,7 +113,7 @@
 						   <li class="">Consectetur adipisicing elit</li>
 						   <li class="">Labore et dolore magna</li>                                
 						</ol>
-						<button>More</button>
+						<button class="block-about__btn">More</button>
 					</div>
 				</div>
 			</div>
