--- a/src/views/index.html
+++ b/src/views/index.html
@@ -40,7 +40,11 @@
 				<div class="wrap">
 					<div class="block-book">
 						<div class="block-book-demo">
-
+							<h2 class="block-book-demo__title">
+								Good Book
+								<span>Don’t judge a book by its cover</span>
+							</h2>
+							<p class="block-book-demo__author">- By Emma Anderson</p>
 						</div>
 						<div class="block-text">
 							<p class="block-text__name">- By Emma Anderson</p>
@@ -88,11 +92,11 @@
 				<p class="page__subtitle">Let’s see what we have covered in the book</p>
 				<div class="block-about">
 					<div class="block-about-text">
-						<h3 class="">About the book</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur.</p>
-						<div class="block-about-text__social">
-							<p>Featured in:</p>
-							<ul>
+						<h3 class="subtitle">About the book</h3>
+						<p class="block-about-text__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur.</p>
+						<div class="block-about-social">
+							<p class="block-about-social__title">Featured in:</p>
+							<ul class="block-about-social__list">
 								<li><a href="#" class=""><i class="fab fa-stack-overflow"></i></a></li>
 								<li><a href="#" class=""><i class="fab fa-amazon"></i></a></li>
 								<li><a href="#" class=""><i class="fab fa-sass"></i></a></li>
@@ -100,7 +104,7 @@
 						</div>
 					</div>
 					<div class="block-about-table">
-						<h3>Table of contents</h3>
+						<h3 class="subtitle">Table of contents</h3>
 						<ol class="block-about-table__list">
 						   <li class="">Lorem ipsum dolor sit amet</li>
 						   <li class="">Consectetur adipisicing elit</li>
@@ -116,6 +120,51 @@
 						<button class="block-about__btn">More</button>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="page">
+			<div class="wrap">
+				<h2 class="page__title">Other Books</h2>
+				<p class="page__subtitle">Some books you might be interested in</p>
+				<div class="block-other">
+					<div class="block-other__item">
+						<div class="block-book-demo block-book-demo_other">
+							<h2 class="block-book-demo__title block-book-demo__title_other">
+								Inception
+								<span>Books are the best friends</span>
+							</h2>
+							<p class="block-book-demo__author block-book-demo__author_other">- By Emma Anderson</p>
+						</div>
+						<h3 class="subtitle">Inception</h3>
+						<p class="block-about-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+						<a class="block-other__btn-more" href="">Read more</a>
+					</div>					
+					<div class="block-other__item">
+						<div class="block-book-demo block-book-demo_other">
+							<h2 class="block-book-demo__title block-book-demo__title_other">
+									Fight Club
+								<span>Books are the best friends</span>
+							</h2>
+							<p class="block-book-demo__author block-book-demo__author_other">- By Emma Anderson</p>
+						</div>
+						<h3 class="subtitle">Fight Club</h3>
+						<p class="block-about-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+						<a class="block-other__btn-more" href="">Read more</a>
+					</div>					
+					<div class="block-other__item">
+						<div class="block-book-demo block-book-demo_other">
+							<h2 class="block-book-demo__title block-book-demo__title_other">
+								Daredevils
+								<span>Books are the best friends</span>
+							</h2>
+							<p class="block-book-demo__author block-book-demo__author_other">- By Emma Anderson</p>
+						</div>
+						<h3 class="subtitle">Daredevils</h3>
+						<p class="block-about-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+						<a class="block-other__btn-more" href="#">Read more</a>
+					</div>					
+				</div>
+				<a href="#" class="block-text__btn block-text__btn_other">Browse all books</a>
 			</div>
 		</div>
 		<script src="./js/main.js" defer></script>
