--- a/src/views/index.html
+++ b/src/views/index.html
@@ -51,7 +51,7 @@
 							<h1 class="block-text__title">BUKEE: THE BOOK<span>A room without books is like a body without a soul</span></h1>
 							<p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 							<p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
-							<a href="#" class="block-text__btn">Buy this book - $15.00</a>
+							<a href="#" class="page__btn">Buy this book - $15.00</a>
 							<small>* Some conditions may applicable</small>
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 						<h2 class="block-text__title">Emma Anderson<span>A room without books is like a body without a soul</span></h2>
 						<p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						<p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
-						<a href="#" class="block-text__btn block-text__btn_biography">Read full biography</a>                    
+						<a href="#" class="page__btn page__btn_biography">Read full biography</a>                    
 					</div>
 					<div class="block-ava">
 						<svg class="block-ava__svg" width="435" height="558">
@@ -97,27 +97,27 @@
 						<div class="block-about-social">
 							<p class="block-about-social__title">Featured in:</p>
 							<ul class="block-about-social__list">
-								<li><a href="#" class=""><i class="fab fa-stack-overflow"></i></a></li>
-								<li><a href="#" class=""><i class="fab fa-amazon"></i></a></li>
-								<li><a href="#" class=""><i class="fab fa-sass"></i></a></li>
+								<li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
+								<li><a href="#"><i class="fab fa-amazon"></i></a></li>
+								<li><a href="#"><i class="fab fa-sass"></i></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="block-about-table">
 						<h3 class="subtitle">Table of contents</h3>
 						<ol class="block-about-table__list">
-						   <li class="">Lorem ipsum dolor sit amet</li>
-						   <li class="">Consectetur adipisicing elit</li>
-						   <li class="">Labore et dolore magna</li>
-						   <li class="">Consectetur adipisicing elit</li>
-						   <li class="">Labore et dolore magna</li>                                
-						   <li class="">Lorem ipsum dolor sit amet</li>
-						   <li class="">Consectetur adipisicing elit</li>
-						   <li class="">Labore et dolore magna</li>
-						   <li class="">Consectetur adipisicing elit</li>
-						   <li class="">Labore et dolore magna</li>                                
+						   <li>Lorem ipsum dolor sit amet</li>
+						   <li>Consectetur adipisicing elit</li>
+						   <li>Labore et dolore magna</li>
+						   <li>Consectetur adipisicing elit</li>
+						   <li>Labore et dolore magna</li>                                
+						   <li>Lorem ipsum dolor sit amet</li>
+						   <li>Consectetur adipisicing elit</li>
+						   <li>Labore et dolore magna</li>
+						   <li>Consectetur adipisicing elit</li>
+						   <li>Labore et dolore magna</li>                                
 						</ol>
-						<button class="block-about__btn">More</button>
+						<button class="page__btn page__btn_about">More</button>
 					</div>
 				</div>
 			</div>
@@ -164,7 +164,7 @@
 						<a class="block-other__btn-more" href="#">Read more</a>
 					</div>					
 				</div>
-				<a href="#" class="block-text__btn block-text__btn_other">Browse all books</a>
+				<a href="#" class="page__btn page__btn_other">Browse all books</a>
 			</div>
 		</div>
 		<script src="./js/main.js" defer></script>
