--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ $light-color:#fff;
 $accent-color:#65e496;
 $bg-light-color: #f5f6fa;
 $bg-dark-color: #44444f;
+$text-color: #696980;
 
 h1, h2, h3, h4, p {
     padding: 0;
@@ -81,19 +82,26 @@ body {
 
 .block-text {
     flex-basis: calc(92% - 500px);
-    position: relative;
-    z-index: 0;
+    &_events {
+        flex-basis: calc(92% - 506px);
+    }   
     &__name {
         font-family: 'Open Sans', serif;
         font-size: 18px;
         letter-spacing: 0.85px;
         margin-bottom: 43px;
         margin-left: 2px;
-    }
-    &__name_top {
-        margin-top: 15px;
-        margin-bottom: 33px;
-        margin-left: 0px;
+        &_top {
+            margin-top: 15px;
+            margin-bottom: 33px;
+            margin-left: 0px;
+        }
+        &_events {
+            margin-top: 0;
+            margin-bottom: 36px;
+            margin-left: 3px;
+            line-height: 17px;
+        }
     }
     &__title {
         font-size: 48px;
@@ -106,6 +114,12 @@ body {
             color: $accent-color;
             margin-top: 24px;
             letter-spacing: 0.9px;
+        }
+        &_events {
+            span {
+                letter-spacing: 0.92px;
+                margin-left: 2px;
+            }
         }
     }
     &__description {
@@ -120,6 +134,29 @@ body {
         font-weight: 400;
         font-style: italic;
         letter-spacing: 0.6px;
+    }
+    &-item {
+        margin-top: 40px;
+        &__date {
+            font-family: 'Open Sans', serif;          
+            color: $text-color;            
+            letter-spacing: 0.75px;
+        }
+        &__title {
+            font-size: 18px;
+            color: $bg-dark-color;
+            margin-top: 4px;
+            letter-spacing: 0.9px;
+        }
+        &__desc {
+            font-family: 'Open Sans', serif;            
+            color: $text-color;
+            margin-top: 16px;
+            letter-spacing: 0.75px;
+        }
+        &:last-child {
+            margin-top: 55px;
+        }
     }
 }
 
@@ -183,8 +220,7 @@ body {
         font-size: 18px;
         letter-spacing: 0.9px;
     }
-    &__btn {
-        position: relative;
+    &__btn {       
         display: block;
         outline: none;
         border: none;
@@ -196,25 +232,18 @@ body {
         max-width: 250px;
         border-radius: 3px;
         margin-top: 47px;
-        padding: 12px 0;
+        padding: 11px 0 15px 0;
         letter-spacing: 0.75px;
-        margin-bottom: 16px;
-        &::before {
-            content: '';
-            display: block;
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            height: 20px;
-            width: 100%;
-            background-color: #b2f1be;
-            border-radius: 3px;
-            z-index: -1;
-        }
+        margin-bottom: 14px;
+        box-shadow: 0 -2px #adedbb inset;  
+        &_main {
+            box-shadow: 0 -2px #59ba88 inset;
+        }     
         &_biography {
             max-width: 236px;
         }
         &_about {
+            cursor: pointer;
             letter-spacing: 0.9px;
             padding: 13px 42px 17px 45px;            
             margin-left: 2px;
@@ -224,6 +253,11 @@ body {
             background-color: #65e4a4;
             margin: 84px auto 0 auto;
             max-width: 221px;
+        }
+        &_registration {
+            max-width: fit-content;
+            padding: 11px 27px 15px 34px;
+            margin-top: 24px;
         }
     }
 }
@@ -239,10 +273,18 @@ body {
         position: absolute;
         right: 0;
         z-index: -1;
+        &_left {
+            left: 0;
+        }
     }
     &__img {
         margin-top: 48px;
         margin-right: 45px;
+        &_left {
+            margin-right: 0;
+            margin-left: 50px;
+            margin-top: 49px;
+        }
     }
 }
 
@@ -305,9 +347,7 @@ body {
         }
     }    
     &-table {
-        flex-basis: 49%;
-        position: relative;
-        z-index: 0;
+        flex-basis: 49%;        
         &__list {
             margin: 25px 0 0 0;
             padding: 0;
