--- a/src/views/index.html
+++ b/src/views/index.html
@@ -51,7 +51,7 @@
 							<h1 class="block-text__title">BUKEE: THE BOOK<span>A room without books is like a body without a soul</span></h1>
 							<p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 							<p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
-							<a href="#" class="page__btn">Buy this book - $15.00</a>
+							<a href="#" class="page__btn page__btn_main">Buy this book - $15.00</a>
 							<small>* Some conditions may applicable</small>
 						</div>
 					</div>
@@ -76,7 +76,7 @@
 							</linearGradient>
 							<rect width="435" height="558" x="0" y="0" fill="url(#gradient)"></rect>
 						</svg>
-						<img class="block-ava__img" src="../img/author.png" alt="">
+						<img class="block-ava__img" src="../img/author.png" alt="author">
 					</div>
 				</div>
 				<div class="block-counter">                    
@@ -165,6 +165,38 @@
 					</div>					
 				</div>
 				<a href="#" class="page__btn page__btn_other">Browse all books</a>
+			</div>
+		</div>
+		<div class="page">
+			<div class="wrap">
+				<div class="block-author">
+					<div class="block-ava">
+						<svg class="block-ava__svg block-ava__svg_left" width="435" height="704">
+							<linearGradient id="gradient" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="435" y2="704">
+								<stop  offset="1" style="stop-color:#59c2ae"/>
+								<stop  offset="0" style="stop-color:#446a87"/>
+							</linearGradient>
+							<rect width="435" height="704" x="0" y="0" fill="url(#gradient)"></rect>
+						</svg>
+						<img class="block-ava__img block-ava__img_left" src="../img/author-2.png" alt="author-2">
+					</div>
+					<div class="block-text block-text_events">
+						<p class="block-text__name block-text__name_events">- Emma Anderson</p>
+						<h2 class="block-text__title block-text__title_events">Upcoming Events<span>Some upcoming events you might be interested in</span></h2>
+						<div class="block-text-item">
+							<p class="block-text-item__date">November 21, 2018</p>
+							<h4 class="block-text-item__title">Book signing - San francisco, CA</h4>
+							<p class="block-text-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>							
+							<a href="#" class="page__btn page__btn_registration">Register</a>
+						</div>                    
+						<div class="block-text-item">
+							<p class="block-text-item__date">November 21, 2018</p>
+							<h4 class="block-text-item__title">Book reading - Los Angeles, CA</h4>
+							<p class="block-text-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>							
+							<a href="#" class="page__btn page__btn_registration">Register</a>
+						</div>                    
+					</div>					
+				</div>				
 			</div>
 		</div>
 		<script src="./js/main.js" defer></script>
