--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,10 @@ h1, h2, h3, h4, p {
     margin: 0;
 }
 
+h2, h3, h4 {
+    color: $bg-dark-color;
+}
+
 h3 {
     font-size: 24px;
     letter-spacing: 1.2px;
@@ -25,6 +29,7 @@ body {
    font-family: 'Roboto Slab', serif;
    font-size: 15px;
    line-height: 24px;
+   color: $text-color;
 }
 
 .wrap {
@@ -81,7 +86,7 @@ body {
 }
 
 .block-text {
-    flex-basis: calc(92% - 500px);
+    flex-basis: calc(92% - 500px);    
     &_events {
         flex-basis: calc(92% - 506px);
     }   
@@ -107,7 +112,7 @@ body {
         font-size: 48px;
         font-weight: 700;
         letter-spacing: 1.8px;
-        margin-bottom: 38px;
+        margin-bottom: 38px;        
         span {
             display: block;
             font-size: 18px;
@@ -143,8 +148,7 @@ body {
             letter-spacing: 0.75px;
         }
         &__title {
-            font-size: 18px;
-            color: $bg-dark-color;
+            font-size: 18px;           
             margin-top: 4px;
             letter-spacing: 0.9px;
         }
@@ -179,6 +183,7 @@ body {
             top: 118px;
             left: 131px;
             letter-spacing: 1.3px;
+            color: $light-color;
             span{
                 text-transform: initial;
                 font-weight: 400;
@@ -259,6 +264,16 @@ body {
             padding: 11px 27px 15px 34px;
             margin-top: 24px;
         }
+        &_blog {
+            max-width: 265px;
+            margin: 84px auto 0 auto;
+        }
+    }
+    &-events {
+        padding: 160px 0 174px 0;
+    }
+    &_blog {
+        padding: 166px 0 159px 0;
     }
 }
 
@@ -329,7 +344,8 @@ body {
             font-family: 'Roboto Slab', serif;
             font-size: 18px;
             font-weight: 700;
-            letter-spacing: 0.9px;            
+            letter-spacing: 0.9px;
+            color: $bg-dark-color;           
         }
         &__list {
             list-style-type: none;
@@ -436,4 +452,48 @@ body {
         color: $accent-color;
         margin-top: 17px;
     }    
+}
+.block-blog {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 85px;
+    h4 {
+        font-size: 18px;
+        font-weight: 700;
+        letter-spacing: 0.9px;
+        margin-bottom: 3px;
+        margin-top: 16px;
+    }
+    &-info {
+        display: inline-block;
+        font-family: 'Open Sans', serif;
+        font-size: 15px;
+        letter-spacing: 0.75px;
+        a {
+            text-decoration: none;
+            color: $accent-color;
+            span {
+                color: $text-color;
+            }
+        }    
+    }
+    &__desc {
+        margin-top: 12px;
+        width: 369px;
+    }
+    &-img {
+        position: relative;
+        width: 369px;
+        height: 224px;
+        overflow: hidden;
+        img {
+            width: 369px;
+            height: 224px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            object-fit: cover;
+            transform: translate(-50%, -50%);
+        }
+    }
 }
