--- a/src/views/index.html
+++ b/src/views/index.html
@@ -167,7 +167,7 @@
 				<a href="#" class="page__btn page__btn_other">Browse all books</a>
 			</div>
 		</div>
-		<div class="page">
+		<div class="page page-events">
 			<div class="wrap">
 				<div class="block-author">
 					<div class="block-ava">
@@ -197,6 +197,39 @@
 						</div>                    
 					</div>					
 				</div>				
+			</div>
+		</div>
+		<div class="page page_gray page_blog">
+			<div class="wrap">
+				<h2 class="page__title">Latest from Blog</h2>
+				<p class="page__subtitle">Some of the latest posts from my personal blog</p>
+				<div class="block-blog">
+					<div class="block-blog-item">
+						<div class="block-blog-img"><img src="../img/blog1.jpg" alt=""></div>
+						<h4>Importance of light in photography</h4>
+						<div class="block-blog-info">
+							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">June 20<span>, </span>2018</a></p>
+							<p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+						</div>
+					</div>
+					<div class="block-blog-item">
+						<div class="block-blog-img"><img src="../img/blog2.jpg" alt=""></div>
+						<h4>The tools you need for the perfection</h4>
+						<div class="block-blog-info">
+							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">June 25<span>, </span>2018</a></p>
+							<p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+						</div>
+					</div>
+					<div class="block-blog-item">
+						<div class="block-blog-img"><img src="../img/blog3.jpg" alt=""></div>
+						<h4>Knowing the difference is important</h4>
+						<div class="block-blog-info">
+							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">August 22<span>, </span>2018</a></p>
+							<p class="block-blog__desc">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+						</div>
+					</div>
+				</div>
+				<a href="#" class="page__btn page__btn_blog">Read more in the blog</a>
 			</div>
 		</div>
 		<script src="./js/main.js" defer></script>
