--- a/src/views/index.html
+++ b/src/views/index.html
@@ -205,7 +205,7 @@
 				<p class="page__subtitle">Some of the latest posts from my personal blog</p>
 				<div class="block-blog">
 					<div class="block-blog-item">
-						<div class="block-blog-img"><img src="../img/blog1.jpg" alt=""></div>
+						<div class="block-blog-img"><img src="../img/blog-img-1.png" alt=""></div>
 						<h4>Importance of light in photography</h4>
 						<div class="block-blog-info">
 							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">June 20<span>, </span>2018</a></p>
@@ -213,7 +213,7 @@
 						</div>
 					</div>
 					<div class="block-blog-item">
-						<div class="block-blog-img"><img src="../img/blog2.jpg" alt=""></div>
+						<div class="block-blog-img"><img src="../img/blog-img-2.png" alt=""></div>
 						<h4>The tools you need for the perfection</h4>
 						<div class="block-blog-info">
 							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">June 25<span>, </span>2018</a></p>
@@ -221,7 +221,7 @@
 						</div>
 					</div>
 					<div class="block-blog-item">
-						<div class="block-blog-img"><img src="../img/blog3.jpg" alt=""></div>
+						<div class="block-blog-img"><img src="../img/blog-img-3.png" alt=""></div>
 						<h4>Knowing the difference is important</h4>
 						<div class="block-blog-info">
 							<p>By <a href="#">Emma Anderson</a><span> - </span><a href="#">August 22<span>, </span>2018</a></p>
@@ -230,6 +230,20 @@
 					</div>
 				</div>
 				<a href="#" class="page__btn page__btn_blog">Read more in the blog</a>
+			</div>
+		</div>
+		<div class="page">
+			<div class="wrap">
+				<div class="block-letter">
+					<div class="block-letter-item">
+						<h2 class="page__title page__title_letter">Join Newsletter</h2>
+						<p class="block-letter__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspen disse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+					</div>
+					<div class="block-letter-item">
+						<input class="block-letter__input" type="text" name="" placeholder="Enter your email">
+						<button class="page__btn page__btn_letter">Subscribe</button>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="./js/main.js" defer></script>
