--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,6 +19,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 		<link rel="stylesheet" href="./styles/main.css">
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	</head>
 	<body>
 		<div class="page-main">
@@ -167,6 +168,30 @@
 				<a href="#" class="page__btn page__btn_other">Browse all books</a>
 			</div>
 		</div>
+		<div class="page">
+			<div class="wrap">
+				<div class="block-carousel">
+					<div>
+						<div class="block-carousel__avatar block-carousel__avatar_1"><span><i class="fas fa-quote-right"></i></span></div>
+						<h3 class="subtitle block-carousel__subtitle">Kate Dennings</h3>
+						<p class="block-carousel__text">Calligraphy Expert</p>
+						<p class="block-carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+					</div>
+					<div>
+						<div class="block-carousel__avatar block-carousel__avatar_2"><span><i class="fas fa-quote-right"></i></span></div>
+						<h3 class="subtitle block-carousel__subtitle">Stan Marsh</h3>
+						<p class="block-carousel__text">Publisher</p>
+						<p class="block-carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+					</div>
+					<div>
+						<div class="block-carousel__avatar block-carousel__avatar_3"><span><i class="fas fa-quote-right"></i></span></div>
+						<h3 class="subtitle block-carousel__subtitle">Kyle Broflovski</h3>
+						<p class="block-carousel__text">Chief Editor</p>
+						<p class="block-carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="page page-events">
 			<div class="wrap">
 				<div class="block-author">
@@ -283,5 +308,15 @@
 			</div>
 		</div>
 		<script src="./js/main.js" defer></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$('.block-carousel').slick({					
+					dots:true,
+					arrows: false
+				});
+			});
+		</script>
 	</body>
 </html>
