--- a/src/views/index.html
+++ b/src/views/index.html
@@ -172,19 +172,28 @@
 			<div class="wrap">
 				<div class="block-carousel">
 					<div>
-						<div class="block-carousel__avatar block-carousel__avatar_1"><span><i class="fas fa-quote-right"></i></span></div>
+						<div class="block-carousel__avatar">
+							<div class="block-carousel__foto block-carousel__foto_1"></div>
+							<span><i class="fas fa-quote-right"></i></span>
+						</div>
 						<h3 class="subtitle block-carousel__subtitle">Kate Dennings</h3>
 						<p class="block-carousel__text">Calligraphy Expert</p>
 						<p class="block-carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
 					</div>
 					<div>
-						<div class="block-carousel__avatar block-carousel__avatar_2"><span><i class="fas fa-quote-right"></i></span></div>
+						<div class="block-carousel__avatar">
+							<div class="block-carousel__foto block-carousel__foto_2"></div>
+							<span><i class="fas fa-quote-right"></i></span>
+						</div>
 						<h3 class="subtitle block-carousel__subtitle">Stan Marsh</h3>
 						<p class="block-carousel__text">Publisher</p>
 						<p class="block-carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
 					</div>
 					<div>
-						<div class="block-carousel__avatar block-carousel__avatar_3"><span><i class="fas fa-quote-right"></i></span></div>
+						<div class="block-carousel__avatar">
+							<div class="block-carousel__foto block-carousel__foto_3"></div>
+							<span><i class="fas fa-quote-right"></i></span>
+						</div>
 						<h3 class="subtitle block-carousel__subtitle">Kyle Broflovski</h3>
 						<p class="block-carousel__text">Chief Editor</p>
 						<p class="block-carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
