remove shadow button up

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -514,6 +514,7 @@ body {
             right: 3vw;
             padding: 17px 20px;
             opacity: 0.5;
+            box-shadow: none;
             -webkit-transition: 0.3s;
             transition: 0.3s;
             @media(max-width:1024px) {
